--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -3,10 +3,17 @@ server {
     root /var/www/public;
 
     location / {
-        try_files $uri /index.html;
+        try_files $uri /index.php;
     }
 
-    location /asd {
-        try_files $uri /asd.html;
+    location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
+
 } 
